<resources>
    <string name="app_name">NightOwl</string>
    <string name="longitudine">Longitudine:</string>
    <string name="latitudine">Latitudine:</string>
    <string name="StringBottone">Cerca locali</string>
    <string name="MessaggioMain">Posizione attuale:</string>
    <string name="logo">Logo</string>

    <string name="title_activity_maps">Current Place Details</string>
    <string name="default_info_title">Default Location</string>
    <string name="default_info_snippet">No places found, because location permission is disabled.</string>
    <string name="option_get_place">Get place</string>
    <string name="pick_place">Choose a place</string>
    <string name="common_error_internet">Errore</string>
</resources>
